# Fight-for-Glory

./: CMakeLists.txt
.cache/clangd/index/: Settings.cpp.CBA8826F75D68E3A.idx  Settings.hpp.87840A274CE2FCD9.idx  context.c.92B383CDC20FB30A.idx  egl_context.c.FE4E5CDC87FFFC70.idx  glad.c.E968D578EC9F7BB9.idx  glad.h.BBC03765E06BCE91.idx  glfw3.h.0CB0418BB1BBC532.idx  glfw3native.h.A75977D6A3AF9755.idx  glx_context.c.A1A020ADBC20D166.idx  init.c.AA5C3FBC2E745918.idx  input.c.643C07A7F4528519.idx  internal.h.F73B59F97C2224E1.idx  khrplatform.h.F74BF9666F970D03.idx  linux_joystick.c.7FFB48B4E9FE8797.idx  linux_joystick.h.F746614B0DCF3D0C.idx  main.cpp.0EBF94F7F5353FB1.idx  mappings.h.F15A8CA9A406EB27.idx  monitor.c.41AD89CEF117A73E.idx  null_init.c.CC8EA087D2C8ED54.idx  null_joystick.c.CBD9DF1734981CC0.idx  null_joystick.h.87E6571B103CC9F1.idx  null_monitor.c.4FF4A7F7B7050765.idx  null_platform.h.2E0D0F24B8F8D730.idx  null_window.c.F8B2B7BF7B01CFDF.idx  osmesa_context.c.394A211DDEC0AFDA.idx  platform.c.7D4655793FADD7D5.idx  platform.h.F41993313B7FF6FF.idx  posix_module.c.BE8E611B8ECF37CC.idx  posix_poll.c.3C7B0C07067EE6FB.idx  posix_poll.h.8E18FA6E6504AC3C.idx  posix_thread.c.E9DC964FF54A8995.idx  posix_thread.h.920FD02D548445D2.idx  posix_time.c.5EC6D56ABB24656D.idx  posix_time.h.BF19A3139468257D.idx  vulkan.c.5EB46295384B05EE.idx  window.c.FD63F64B7BC7712F.idx  wl_init.c.8BD6979F71A0C429.idx  wl_monitor.c.DB9D693BEA2C8AC1.idx  wl_platform.h.7A543BBD8A8430E6.idx  (+7 more)
lib/glad/: CMakeLists.txt
src/: Settings.cpp  Settings.hpp  Window.h  Window.hpp  main.cpp
(+1 files in other folders)
